import { it, expect } from 'vitest';
import { Transaction } from 'viem';

import { createRollupPrepareTransaction } from './createRollupPrepareTransaction';

// https://sepolia.arbiscan.io/tx/0x5b0b49e0259289fc89949a55a5ad35a8939440a55065d29b14e5e7ef7494efff
it('successfully parses input calldata for a chain created with RollupCreator v1.1', () => {
  const { getInputs } = createRollupPrepareTransaction({
    input:
      '0xcb73d6e2000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000000e00000000000000000000000003c3a5b44fab0e2025160a765348c21c08e41d1af00000000000000000000000000000000000000000000000000000000000005400000000000000000000000000000000000000000000000000000000000019999000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000000000000000005f5e100000000000000000000000000000000000000000000000000000000000000009600000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000016345785d8a00008b104a2e80ac6165dc58b9048de12f301d70b02a0ab51396c22b4b4b802a16a400000000000000000000000041c966f99de0ca6f6531fbcac9db7eabdf119744000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000006fee560eb00000000000000000000000000000000000000000000000000000000000001c000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000007080000000000000000000000000000000000000000000000000000000000000012c00000000000000000000000000000000000000000000000000000000000546000000000000000000000000000000000000000000000000000000000000000e1000000000000000000000000000000000000000000000000000000000000002757b22686f6d657374656164426c6f636b223a302c2264616f466f726b426c6f636b223a6e756c6c2c2264616f466f726b537570706f7274223a747275652c22656970313530426c6f636b223a302c2265697031353048617368223a22307830303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030222c22656970313535426c6f636b223a302c22656970313538426c6f636b223a302c2262797a616e7469756d426c6f636b223a302c22636f6e7374616e74696e6f706c65426c6f636b223a302c2270657465727362757267426c6f636b223a302c22697374616e62756c426c6f636b223a302c226d756972476c6163696572426c6f636b223a302c226265726c696e426c6f636b223a302c226c6f6e646f6e426c6f636b223a302c22636c69717565223a7b22706572696f64223a302c2265706f6368223a307d2c22617262697472756d223a7b22456e61626c654172624f53223a747275652c22416c6c6f774465627567507265636f6d70696c6573223a66616c73652c2244617461417661696c6162696c697479436f6d6d6974746565223a747275652c22496e697469616c4172624f5356657273696f6e223a32302c2247656e65736973426c6f636b4e756d223a302c224d6178436f646553697a65223a32343537362c224d6178496e6974436f646553697a65223a34393135322c22496e697469616c436861696e4f776e6572223a22307834314339363666393944653063413646363533316662634163394462376561424446313139373434227d2c22636861696e4964223a33303034363234393139357d000000000000000000000000000000000000000000000000000000000000000000000000000000000000010000000000000000000000008e842599f71abd661737bb3108a53e5b1787c791',
  } as unknown as Transaction);

  expect(getInputs()).toMatchSnapshot();
});

// https://sepolia.arbiscan.io/tx/0x77db43157182a69ce0e6d2a0564d2dabb43b306d48ea7b4d877160d6a1c9b66d
it('successfully parses input calldata for a chain created with RollupCreator v2.1', () => {
  const { getInputs } = createRollupPrepareTransaction({
    input:
      '0x331f9b0b0000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000000000000000000000005600000000000000000000000000000000000000000000000000000000000019999000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000005f5e10000000000000000000000000000000000000000000000000000000000000006000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000009600000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000016345785d8a0000260f5fa5c3176a856893642e149cf128b5a8de9f828afec8d11184415dd8dc6900000000000000000000000031bac660fbb4ef1b91409db42cb4c6e75527d004000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000007a91eb4ee00000000000000000000000000000000000000000000000000000000000001c000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000007080000000000000000000000000000000000000000000000000000000000000012c00000000000000000000000000000000000000000000000000000000000546000000000000000000000000000000000000000000000000000000000000000e1000000000000000000000000000000000000000000000000000000000000002757b22686f6d657374656164426c6f636b223a302c2264616f466f726b426c6f636b223a6e756c6c2c2264616f466f726b537570706f7274223a747275652c22656970313530426c6f636b223a302c2265697031353048617368223a22307830303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030222c22656970313535426c6f636b223a302c22656970313538426c6f636b223a302c2262797a616e7469756d426c6f636b223a302c22636f6e7374616e74696e6f706c65426c6f636b223a302c2270657465727362757267426c6f636b223a302c22697374616e62756c426c6f636b223a302c226d756972476c6163696572426c6f636b223a302c226265726c696e426c6f636b223a302c226c6f6e646f6e426c6f636b223a302c22636c69717565223a7b22706572696f64223a302c2265706f6368223a307d2c22617262697472756d223a7b22456e61626c654172624f53223a747275652c22416c6c6f774465627567507265636f6d70696c6573223a66616c73652c2244617461417661696c6162696c697479436f6d6d6974746565223a747275652c22496e697469616c4172624f5356657273696f6e223a32302c2247656e65736973426c6f636b4e756d223a302c224d6178436f646553697a65223a32343537362c224d6178496e6974436f646553697a65223a34393135322c22496e697469616c436861696e4f776e6572223a22307833316241433636306642423465463142393134303964423432434234433665373535323764303034227d2c22636861696e4964223a33323930323133323937347d00000000000000000000000000000000000000000000000000000000000000000000000000000000000004000000000000000000000000dbb2c9923b5de18b151bc55ed571edcd1fc7eeb900000000000000000000000084b2effdd54aa5dce861440ae9b9d320b043a64c00000000000000000000000039b4ce32e557225a401917a701ac4d267648635a000000000000000000000000e2d0cc872647b1a129b942bbfc980b31e8e94df200000000000000000000000000000000000000000000000000000000000000080000000000000000000000009464ad09ce0d157efc6c7eefe577c5aa6dec804d000000000000000000000000c02386b2d10a37e71145b6a7f5569e1db46042130000000000000000000000006c4483f6dcedb5a758b28d28e11f805bdacfe245000000000000000000000000f89836dc33f58394fb34b3e690d3829a65c74286000000000000000000000000d1d25aeb44e99b35e2d5e7db961c73ec94f92a24000000000000000000000000dc4eca04032b9178020ff0c6154a7e87309a429f000000000000000000000000e122f9838a4c8e6834f24d1b9dca92eb52a8e17e000000000000000000000000b280fd59090f3d95588d94bacd22b336de2278e0',
  } as unknown as Transaction);

  expect(getInputs()).toMatchSnapshot();
});

// https://sepolia.etherscan.io/tx/0x751f1b2bab2806769f663db2141d434e4d8c9b65bc4a5d7ca10ed597f918191f
it('successfully parses input calldata for a chain created with RollupCreator v3.1', () => {
  const { getInputs } = createRollupPrepareTransaction({
    input:
      '0x9ba742fd000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000001200000000000000000000000000000000000000000000000000000000000000820000000000000000000000000000000000000000000000000000000000001cccc000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000000000000000005f5e10000000000000000000000000000000000000000000000000000000000000008600000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000960000000000000000000000007b79995e5f793a07bc00c21412e50ecae098e7f90000000000000000000000000000000000000000000000000de0b6b3a7640000184884e1eb9fefdc158f6c8ac912bb183bf3cf83f0090317e0bc4ac5860baa3900000000000000000000000031bac660fbb4ef1b91409db42cb4c6e75527d00400000000000000000000000031bac660fbb4ef1b91409db42cb4c6e75527d00400000000000000000000000000000000000000000000000000000016da2a891f00000000000000000000000000000000000000000000000000000000000003e0000000000000000000000000000000000000000000000000000000000000004b000000000000000000000000000000000000000000000000000000000003138000000000000000000000000000000000000000000000000000000000000006800000000000000000000000000000000000000000000000000000000000007080000000000000000000000000000000000000000000000000000000000000012c00000000000000000000000000000000000000000000000000000000000546000000000000000000000000000000000000000000000000000000000000000e1000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000000080000000000000000000000000000000000000000000000000000000000000080000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000100000000000000000000000000000000000000000000000000000000000038400000000000000000000000000000000000000000000000000000000000000258000000000000000000000000000000000000000000000000000000000000384000000000000000000000000000000000000000000000000000000000000001f400000000000000000000000000000000000000000000000000000000000002767b22686f6d657374656164426c6f636b223a302c2264616f466f726b426c6f636b223a6e756c6c2c2264616f466f726b537570706f7274223a747275652c22656970313530426c6f636b223a302c2265697031353048617368223a22307830303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030222c22656970313535426c6f636b223a302c22656970313538426c6f636b223a302c2262797a616e7469756d426c6f636b223a302c22636f6e7374616e74696e6f706c65426c6f636b223a302c2270657465727362757267426c6f636b223a302c22697374616e62756c426c6f636b223a302c226d756972476c6163696572426c6f636b223a302c226265726c696e426c6f636b223a302c226c6f6e646f6e426c6f636b223a302c22636c69717565223a7b22706572696f64223a302c2265706f6368223a307d2c22617262697472756d223a7b22456e61626c654172624f53223a747275652c22416c6c6f774465627567507265636f6d70696c6573223a66616c73652c2244617461417661696c6162696c697479436f6d6d6974746565223a66616c73652c22496e697469616c4172624f5356657273696f6e223a33322c2247656e65736973426c6f636b4e756d223a302c224d6178436f646553697a65223a32343537362c224d6178496e6974436f646553697a65223a34393135322c22496e697469616c436861696e4f776e6572223a22307833316241433636306642423465463142393134303964423432434234433665373535323764303034227d2c22636861696e4964223a39383134393530313231357d0000000000000000000000000000000000000000000000000000000000000000000000000000000000030000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000100000000000000000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000000000000000000000001000000000000000000000000ef084323610bd2368591f7effca237e84774822800000000000000000000000000000000000000000000000000000000000000010000000000000000000000004c27ea80668affe69b535bfa2eadb4be6fd5d7a1',
  } as unknown as Transaction);

  expect(getInputs()).toMatchSnapshot();
});

// https://sepolia.etherscan.io/tx/0x6f6e67cc36fdee7248d76811739b2b6718641b5b1a13ca39c7605aa0636e7d67
it('successfully parses input calldata for a chain created with RollupCreator v3.2', () => {
  const { getInputs } = createRollupPrepareTransaction({
    input:
      '0x2d12e32c000000000000000000000000000000000000000000000000000000000000002000000000000000000000000000000000000000000000000000000000000001400000000000000000000000000000000000000000000000000000000000000840000000000000000000000000000000000000000000000000000000000001cccc00000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000003b9aca000000000000000000000000000000000000000000000000000000000000000880000000000000000000000000784fb06549c5ebc20a82ffe251ff3b45c963d8df0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000800000000000000000000000007b79995e5f793a07bc00c21412e50ecae098e7f90000000000000000000000000000000000000000000000000008e1bc9bf040008a7513bf7bb3e3db04b0d982d0e973bcf57bf8b88aef7c6d03dba3a81a56a49900000000000000000000000093a3b783bd697b384bfc6c01a2d2831e4253697500000000000000000000000093a3b783bd697b384bfc6c01a2d2831e425369750000000000000000000000000000000000000000000000000000000078c27c030000000000000000000000000000000000000000000000000000000000000400000000000000000000000000000000000000000000000000000000000000004b000000000000000000000000000000000000000000000000000000000003138000000000000000000000000000000000000000000000000000000000000006800000000000000000000000000000000000000000000000000000000000001c20000000000000000000000000000000000000000000000000000000000000000c00000000000000000000000000000000000000000000000000000000000151800000000000000000000000000000000000000000000000000000000000000e10000000000000000000000000000000000000000000000000000000000400000000000000000000000000000000000000000000000000000000000000000800000000000000000000000000000000000000000000000000000000000000800000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000010000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000000a000000000000000000000000000000000000000000000000000000000000025800000000000000000000000000000000000000000000000000000000000038400000000000000000000000000000000000000000000000000000000000000341000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000002497b22636861696e4964223a323032363031313635312c22686f6d657374656164426c6f636b223a302c2264616f466f726b426c6f636b223a6e756c6c2c2264616f466f726b537570706f7274223a747275652c22656970313530426c6f636b223a302c2265697031353048617368223a22307830303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030303030222c22656970313535426c6f636b223a302c22656970313538426c6f636b223a302c2262797a616e7469756d426c6f636b223a302c22636f6e7374616e74696e6f706c65426c6f636b223a302c2270657465727362757267426c6f636b223a302c22697374616e62756c426c6f636b223a302c226d756972476c6163696572426c6f636b223a302c226265726c696e426c6f636b223a302c226c6f6e646f6e426c6f636b223a302c22636c69717565223a7b22706572696f64223a302c2265706f6368223a307d2c22617262697472756d223a7b22456e61626c654172624f53223a747275652c22416c6c6f774465627567507265636f6d70696c6573223a66616c73652c2244617461417661696c6162696c697479436f6d6d6974746565223a66616c73652c22496e697469616c4172624f5356657273696f6e223a35312c22496e697469616c436861696e4f776e6572223a22307839336133423738334264363937623338344266633643303161326432383331453432353336393735222c2247656e65736973426c6f636b4e756d223a307d7d0000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000300000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001c6bf526340000000000000000000000000000000000000000000000000000000e35fa931a0000000000000000000000000000000000000000000000000000000000000000001000000000000000000000000e6ab2c18ce552fe5fcf43667133776d6337359df0000000000000000000000000000000000000000000000000000000000000001000000000000000000000000784fb06549c5ebc20a82ffe251ff3b45c963d8df',
  } as unknown as Transaction);

  expect(getInputs()).toMatchSnapshot();
});
